; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ra144dec.c_do_output_subblock.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ra144dec.c_do_output_subblock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32*)* @do_output_subblock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_output_subblock(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @get_bits(i32* %13, i32 7)
  store i32 %14, i32* %9, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @get_bits(i32* %15, i32 8)
  store i32 %16, i32* %10, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @get_bits(i32* %17, i32 7)
  store i32 %18, i32* %11, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @get_bits(i32* %19, i32 7)
  store i32 %20, i32* %12, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @ff_subblock_synthesis(i32* %21, i32* %22, i32 %23, i32 %24, i32 %25, i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @ff_subblock_synthesis(i32*, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
